--- a/reinforcement learning/Model free control/MC Prediction.ipynb
+++ b/reinforcement learning/Model free control/MC Prediction.ipynb
@@ -47,11 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:19:41.956517Z",
-     "start_time": "2019-03-21T01:19:41.946574Z"
+     "end_time": "2019-03-21T01:25:12.235282Z",
+     "start_time": "2019-03-21T01:25:12.225328Z"
     }
    },
    "outputs": [],
@@ -76,18 +76,19 @@
     "    # returns (like in the book) but that's memory inefficient.\n",
     "    returns_sum   = defaultdict(float)\n",
     "    returns_count = defaultdict(float)\n",
-    "    \n",
+    "\n",
     "    # The final value function\n",
     "    V = defaultdict(float)\n",
     "    player,dealer,game_over = env.reset()\n",
-    "    \n",
+    "\n",
     "    for _ in range(num_episodes):\n",
     "        observation = env.reset()\n",
+    "        current_state_to_estimate =observation[0]\n",
     "\n",
-    "        if observation[0] in returns_count:\n",
-    "            returns_count[observation[0]] = returns_count[observation[0]] + 1\n",
+    "        if current_state_to_estimate in returns_count:\n",
+    "            returns_count[current_state_to_estimate] = returns_count[current_state_to_estimate] + 1\n",
     "        else:\n",
-    "            returns_count[observation[0]] = 1\n",
+    "            returns_count[current_state_to_estimate] = 1\n",
     "\n",
     "        action_to_take = sample_policy(observation)\n",
     "        observation,reward,game_over,_ = env.step(action_to_take)\n",
@@ -96,12 +97,12 @@
     "            action_to_take = sample_policy(observation)\n",
     "            observation,reward,game_over,_ = env.step(action_to_take)\n",
     "\n",
-    "        if observation[0] in returns_count:\n",
-    "            returns_count[observation[0]] = returns_count[observation[0]] + reward\n",
+    "        if current_state_to_estimate in returns_count:\n",
+    "            returns_sum[current_state_to_estimate] = returns_sum[current_state_to_estimate] + reward\n",
     "        else:\n",
-    "            returns_count[observation[0]] = reward\n",
+    "            returns_sum[current_state_to_estimate] = reward\n",
     "\n",
-    "    for x in returns_sum:\n",
+    "    for x in returns_sum.keys():\n",
     "        V[x] = returns_sum[x]/returns_count[x]\n",
     "\n",
     "    return V    "
@@ -109,11 +110,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 99,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:19:42.233089Z",
-     "start_time": "2019-03-21T01:19:42.230031Z"
+     "end_time": "2019-03-21T01:25:12.452110Z",
+     "start_time": "2019-03-21T01:25:12.448639Z"
     }
    },
    "outputs": [],
@@ -128,25 +129,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:19:43.074005Z",
-     "start_time": "2019-03-21T01:19:42.642981Z"
+     "end_time": "2019-03-21T01:25:13.254742Z",
+     "start_time": "2019-03-21T01:25:12.817272Z"
     },
     "scrolled": false
    },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "min() arg is an empty sequence",
+     "ename": "IndexError",
+     "evalue": "invalid index to scalar variable.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-64-a8dbe4389e5c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mV_10k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmc_prediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplotting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_value_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV_10k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"10,000 Steps\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mV_500k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmc_prediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m500000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplotting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_value_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV_500k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"500,000 Steps\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-100-a8dbe4389e5c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mV_10k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmc_prediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m10000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mplotting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_value_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV_10k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"10,000 Steps\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mV_500k\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmc_prediction\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample_policy\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_episodes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m500000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mplotting\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_value_function\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mV_500k\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"500,000 Steps\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Desktop\\Daily-Neural-Network-Practice-3\\reinforcement learning\\reference\\lib\\plotting.py\u001b[0m in \u001b[0;36mplot_value_function\u001b[1;34m(V, title)\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mPlots\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0mfunction\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0ma\u001b[0m \u001b[0msurface\u001b[0m \u001b[0mplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \"\"\"\n\u001b[1;32m---> 32\u001b[1;33m     \u001b[0mmin_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m     \u001b[0mmax_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mmin_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: min() arg is an empty sequence"
+      "\u001b[1;32m~\\Desktop\\Daily-Neural-Network-Practice-3\\reinforcement learning\\reference\\lib\\plotting.py\u001b[0m in \u001b[0;36m<genexpr>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mPlots\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0mfunction\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0ma\u001b[0m \u001b[0msurface\u001b[0m \u001b[0mplot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \"\"\"\n\u001b[1;32m---> 32\u001b[1;33m     \u001b[0mmin_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     33\u001b[0m     \u001b[0mmax_x\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     34\u001b[0m     \u001b[0mmin_y\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mV\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: invalid index to scalar variable."
      ]
     }
    ],
@@ -160,33 +162,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:22:36.207055Z",
-     "start_time": "2019-03-21T01:22:36.192138Z"
+     "end_time": "2019-03-21T01:25:15.683988Z",
+     "start_time": "2019-03-21T01:25:15.679051Z"
     }
    },
    "outputs": [
     {
-     "ename": "ZeroDivisionError",
-     "evalue": "float division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-84-8f6943b5c8f9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mreturns_sum\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m     \u001b[0mV\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreturns_sum\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mreturns_count\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
-     ]
+     "data": {
+      "text/plain": [
+       "defaultdict(float,\n",
+       "            {21: 0.8735294117647059,\n",
+       "             17: -0.657051282051282,\n",
+       "             13: -0.582089552238806,\n",
+       "             12: -0.5525862068965517,\n",
+       "             18: -0.6181015452538632,\n",
+       "             16: -0.670490093847758,\n",
+       "             14: -0.5636025998142989,\n",
+       "             20: 0.6028636021100227,\n",
+       "             15: -0.6030977734753146,\n",
+       "             19: -0.6819923371647509})"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "V_10k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-21T01:24:09.948347Z",
+     "start_time": "2019-03-21T01:24:09.937423Z"
+    }
+   },
+   "outputs": [],
    "source": [
     "returns_sum   = defaultdict(float)\n",
     "returns_count = defaultdict(float)\n",
@@ -197,11 +215,12 @@
     "\n",
     "for _ in range(10):\n",
     "    observation = env.reset()\n",
+    "    current_state_to_estimate =observation[0]\n",
     "\n",
-    "    if observation[0] in returns_count:\n",
-    "        returns_count[observation[0]] = returns_count[observation[0]] + 1\n",
+    "    if current_state_to_estimate in returns_count:\n",
+    "        returns_count[current_state_to_estimate] = returns_count[current_state_to_estimate] + 1\n",
     "    else:\n",
-    "        returns_count[observation[0]] = 1\n",
+    "        returns_count[current_state_to_estimate] = 1\n",
     "\n",
     "    action_to_take = sample_policy(observation)\n",
     "    observation,reward,game_over,_ = env.step(action_to_take)\n",
@@ -210,10 +229,10 @@
     "        action_to_take = sample_policy(observation)\n",
     "        observation,reward,game_over,_ = env.step(action_to_take)\n",
     "\n",
-    "    if observation[0] in returns_count:\n",
-    "        returns_sum[observation[0]] = returns_sum[observation[0]] + reward\n",
+    "    if current_state_to_estimate in returns_count:\n",
+    "        returns_sum[current_state_to_estimate] = returns_sum[current_state_to_estimate] + reward\n",
     "    else:\n",
-    "        returns_sum[observation[0]] = reward\n",
+    "        returns_sum[current_state_to_estimate] = reward\n",
     "\n",
     "for x in returns_sum.keys():\n",
     "    V[x] = returns_sum[x]/returns_count[x]"
@@ -221,11 +240,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:23:17.346303Z",
-     "start_time": "2019-03-21T01:23:17.342793Z"
+     "end_time": "2019-03-21T01:24:11.411987Z",
+     "start_time": "2019-03-21T01:24:11.408006Z"
     }
    },
    "outputs": [
@@ -233,8 +252,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys([22, 21, 20, 28, 23, 24])\n",
-      "dict_keys([16, 14, 20, 21, 12, 13, 22])\n"
+      "dict_keys([14, 12, 20, 18, 19, 16, 13, 17])\n",
+      "dict_keys([14, 12, 20, 18, 19, 16, 13, 17])\n"
      ]
     }
    ],
@@ -245,21 +264,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-03-21T01:21:20.373333Z",
-     "start_time": "2019-03-21T01:21:20.369356Z"
+     "end_time": "2019-03-21T01:24:43.473528Z",
+     "start_time": "2019-03-21T01:24:43.467569Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "defaultdict(float, {})"
+       "defaultdict(float,\n",
+       "            {14: -1.0,\n",
+       "             12: -1.0,\n",
+       "             20: 1.0,\n",
+       "             18: -1.0,\n",
+       "             19: -1.0,\n",
+       "             16: 1.0,\n",
+       "             13: -1.0,\n",
+       "             17: -1.0})"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
