--- a/reinforcement learning/MCTS/first .ipynb
+++ b/reinforcement learning/MCTS/first .ipynb
@@ -19,6 +19,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-03-26T22:12:03.702618Z",
+     "start_time": "2019-03-26T22:12:03.686657Z"
+    },
+    "code_folding": [
+     1,
+     2,
+     36
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Tic Tac Toe Game State\n",
+    "class GameState:\n",
+    "    \"\"\" A state of the game, i.e. the game board. These are the only functions which are\n",
+    "        absolutely necessary to implement UCT in any 2-player complete information deterministic \n",
+    "        zero-sum game, although they can be enhanced and made quicker, for example by using a \n",
+    "        GetRandomMove() function to generate a random move during rollout.\n",
+    "        By convention the players are numbered 1 and 2.\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "            self.playerJustMoved = 2 # At the root pretend the player just moved is player 2 - player 1 has the first move\n",
+    "        \n",
+    "    def Clone(self):\n",
+    "        \"\"\" Create a deep clone of this game state.\n",
+    "        \"\"\"\n",
+    "        st = GameState()\n",
+    "        st.playerJustMoved = self.playerJustMoved\n",
+    "        return st\n",
+    "\n",
+    "    def DoMove(self, move):\n",
+    "        \"\"\" Update a state by carrying out the given move.\n",
+    "            Must update playerJustMoved.\n",
+    "        \"\"\"\n",
+    "        self.playerJustMoved = 3 - self.playerJustMoved\n",
+    "        \n",
+    "    def GetMoves(self):\n",
+    "        \"\"\" Get all possible moves from this state.\n",
+    "        \"\"\"\n",
+    "    \n",
+    "    def GetResult(self, playerjm):\n",
+    "        \"\"\" Get the game result from the viewpoint of playerjm. \n",
+    "        \"\"\"\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        \"\"\" Don't need this - but good style.\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "class OXOState:\n",
+    "    \"\"\" A state of the game, i.e. the game board.\n",
+    "        Squares in the board are in this arrangement\n",
+    "        012\n",
+    "        345\n",
+    "        678\n",
+    "        where 0 = empty, 1 = player 1 (X), 2 = player 2 (O)\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.playerJustMoved = 2 # At the root pretend the player just moved is p2 - p1 has the first move\n",
+    "        self.board = [0,0,0,0,0,0,0,0,0] # 0 = empty, 1 = player 1, 2 = player 2\n",
+    "        \n",
+    "    def Clone(self):\n",
+    "        \"\"\" Create a deep clone of this game state.\n",
+    "        \"\"\"\n",
+    "        st = OXOState()\n",
+    "        st.playerJustMoved = self.playerJustMoved\n",
+    "        st.board = self.board[:]\n",
+    "        return st\n",
+    "\n",
+    "    def DoMove(self, move):\n",
+    "        \"\"\" Update a state by carrying out the given move.\n",
+    "            Must update playerToMove.\n",
+    "        \"\"\"\n",
+    "        assert move >= 0 and move <= 8 and move == int(move) and self.board[move] == 0\n",
+    "        self.playerJustMoved = 3 - self.playerJustMoved\n",
+    "        self.board[move] = self.playerJustMoved\n",
+    "        \n",
+    "    def GetMoves(self):\n",
+    "        \"\"\" Get all possible moves from this state.\n",
+    "        \"\"\"\n",
+    "        return [i for i in range(9) if self.board[i] == 0]\n",
+    "    \n",
+    "    def GetResult(self, playerjm):\n",
+    "        \"\"\" Get the game result from the viewpoint of playerjm. \n",
+    "        \"\"\"\n",
+    "        for (x,y,z) in [(0,1,2),(3,4,5),(6,7,8),(0,3,6),(1,4,7),(2,5,8),(0,4,8),(2,4,6)]:\n",
+    "            if self.board[x] == self.board[y] == self.board[z]:\n",
+    "                if self.board[x] == playerjm:\n",
+    "                    return 1.0\n",
+    "                else:\n",
+    "                    return 0.0\n",
+    "        if self.GetMoves() == []: return 0.5 # draw\n",
+    "        assert False # Should not be possible to get here\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        s= \"\"\n",
+    "        for i in range(9): \n",
+    "            s += \".XO\"[self.board[i]]\n",
+    "            if i % 3 == 2: s += \"\\n\"\n",
+    "        return s"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
@@ -26,8 +131,9 @@
      "start_time": "2019-03-26T22:10:22.061783Z"
     },
     "code_folding": [
-     135,
-     343
+     2,
+     38,
+     186
     ]
    },
    "outputs": [
@@ -148,255 +254,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "class GameState:\n",
-    "    \"\"\" A state of the game, i.e. the game board. These are the only functions which are\n",
-    "        absolutely necessary to implement UCT in any 2-player complete information deterministic \n",
-    "        zero-sum game, although they can be enhanced and made quicker, for example by using a \n",
-    "        GetRandomMove() function to generate a random move during rollout.\n",
-    "        By convention the players are numbered 1 and 2.\n",
-    "    \"\"\"\n",
-    "    def __init__(self):\n",
-    "            self.playerJustMoved = 2 # At the root pretend the player just moved is player 2 - player 1 has the first move\n",
-    "        \n",
-    "    def Clone(self):\n",
-    "        \"\"\" Create a deep clone of this game state.\n",
-    "        \"\"\"\n",
-    "        st = GameState()\n",
-    "        st.playerJustMoved = self.playerJustMoved\n",
-    "        return st\n",
-    "\n",
-    "    def DoMove(self, move):\n",
-    "        \"\"\" Update a state by carrying out the given move.\n",
-    "            Must update playerJustMoved.\n",
-    "        \"\"\"\n",
-    "        self.playerJustMoved = 3 - self.playerJustMoved\n",
-    "        \n",
-    "    def GetMoves(self):\n",
-    "        \"\"\" Get all possible moves from this state.\n",
-    "        \"\"\"\n",
-    "    \n",
-    "    def GetResult(self, playerjm):\n",
-    "        \"\"\" Get the game result from the viewpoint of playerjm. \n",
-    "        \"\"\"\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        \"\"\" Don't need this - but good style.\n",
-    "        \"\"\"\n",
-    "        pass\n",
-    "\n",
-    "\n",
-    "class NimState:\n",
-    "    \"\"\" A state of the game Nim. In Nim, players alternately take 1,2 or 3 chips with the \n",
-    "        winner being the player to take the last chip. \n",
-    "        In Nim any initial state of the form 4n+k for k = 1,2,3 is a win for player 1\n",
-    "        (by choosing k) chips.\n",
-    "        Any initial state of the form 4n is a win for player 2.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, ch):\n",
-    "        self.playerJustMoved = 2 # At the root pretend the player just moved is p2 - p1 has the first move\n",
-    "        self.chips = ch\n",
-    "        \n",
-    "    def Clone(self):\n",
-    "        \"\"\" Create a deep clone of this game state.\n",
-    "        \"\"\"\n",
-    "        st = NimState(self.chips)\n",
-    "        st.playerJustMoved = self.playerJustMoved\n",
-    "        return st\n",
-    "\n",
-    "    def DoMove(self, move):\n",
-    "        \"\"\" Update a state by carrying out the given move.\n",
-    "            Must update playerJustMoved.\n",
-    "        \"\"\"\n",
-    "        assert move >= 1 and move <= 3 and move == int(move)\n",
-    "        self.chips -= move\n",
-    "        self.playerJustMoved = 3 - self.playerJustMoved\n",
-    "        \n",
-    "    def GetMoves(self):\n",
-    "        \"\"\" Get all possible moves from this state.\n",
-    "        \"\"\"\n",
-    "        return range(1,min([4, self.chips + 1]))\n",
-    "    \n",
-    "    def GetResult(self, playerjm):\n",
-    "        \"\"\" Get the game result from the viewpoint of playerjm. \n",
-    "        \"\"\"\n",
-    "        assert self.chips == 0\n",
-    "        if self.playerJustMoved == playerjm:\n",
-    "            return 1.0 # playerjm took the last chip and has won\n",
-    "        else:\n",
-    "            return 0.0 # playerjm's opponent took the last chip and has won\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        s = \"Chips:\" + str(self.chips) + \" JustPlayed:\" + str(self.playerJustMoved)\n",
-    "        return s\n",
-    "\n",
-    "class OXOState:\n",
-    "    \"\"\" A state of the game, i.e. the game board.\n",
-    "        Squares in the board are in this arrangement\n",
-    "        012\n",
-    "        345\n",
-    "        678\n",
-    "        where 0 = empty, 1 = player 1 (X), 2 = player 2 (O)\n",
-    "    \"\"\"\n",
-    "    def __init__(self):\n",
-    "        self.playerJustMoved = 2 # At the root pretend the player just moved is p2 - p1 has the first move\n",
-    "        self.board = [0,0,0,0,0,0,0,0,0] # 0 = empty, 1 = player 1, 2 = player 2\n",
-    "        \n",
-    "    def Clone(self):\n",
-    "        \"\"\" Create a deep clone of this game state.\n",
-    "        \"\"\"\n",
-    "        st = OXOState()\n",
-    "        st.playerJustMoved = self.playerJustMoved\n",
-    "        st.board = self.board[:]\n",
-    "        return st\n",
-    "\n",
-    "    def DoMove(self, move):\n",
-    "        \"\"\" Update a state by carrying out the given move.\n",
-    "            Must update playerToMove.\n",
-    "        \"\"\"\n",
-    "        assert move >= 0 and move <= 8 and move == int(move) and self.board[move] == 0\n",
-    "        self.playerJustMoved = 3 - self.playerJustMoved\n",
-    "        self.board[move] = self.playerJustMoved\n",
-    "        \n",
-    "    def GetMoves(self):\n",
-    "        \"\"\" Get all possible moves from this state.\n",
-    "        \"\"\"\n",
-    "        return [i for i in range(9) if self.board[i] == 0]\n",
-    "    \n",
-    "    def GetResult(self, playerjm):\n",
-    "        \"\"\" Get the game result from the viewpoint of playerjm. \n",
-    "        \"\"\"\n",
-    "        for (x,y,z) in [(0,1,2),(3,4,5),(6,7,8),(0,3,6),(1,4,7),(2,5,8),(0,4,8),(2,4,6)]:\n",
-    "            if self.board[x] == self.board[y] == self.board[z]:\n",
-    "                if self.board[x] == playerjm:\n",
-    "                    return 1.0\n",
-    "                else:\n",
-    "                    return 0.0\n",
-    "        if self.GetMoves() == []: return 0.5 # draw\n",
-    "        assert False # Should not be possible to get here\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        s= \"\"\n",
-    "        for i in range(9): \n",
-    "            s += \".XO\"[self.board[i]]\n",
-    "            if i % 3 == 2: s += \"\\n\"\n",
-    "        return s\n",
-    "\n",
-    "class OthelloState:\n",
-    "    \"\"\" A state of the game of Othello, i.e. the game board.\n",
-    "        The board is a 2D array where 0 = empty (.), 1 = player 1 (X), 2 = player 2 (O).\n",
-    "        In Othello players alternately place pieces on a square board - each piece played\n",
-    "        has to sandwich opponent pieces between the piece played and pieces already on the \n",
-    "        board. Sandwiched pieces are flipped.\n",
-    "        This implementation modifies the rules to allow variable sized square boards and\n",
-    "        terminates the game as soon as the player about to move cannot make a move (whereas\n",
-    "        the standard game allows for a pass move). \n",
-    "    \"\"\"\n",
-    "    def __init__(self,sz = 8):\n",
-    "        self.playerJustMoved = 2 # At the root pretend the player just moved is p2 - p1 has the first move\n",
-    "        self.board = [] # 0 = empty, 1 = player 1, 2 = player 2\n",
-    "        self.size = sz\n",
-    "        assert sz == int(sz) and sz % 2 == 0 # size must be integral and even\n",
-    "        for y in range(sz):\n",
-    "            self.board.append([0]*sz)\n",
-    "        self.board[sz/2][sz/2] = self.board[sz/2-1][sz/2-1] = 1\n",
-    "        self.board[sz/2][sz/2-1] = self.board[sz/2-1][sz/2] = 2\n",
-    "\n",
-    "    def Clone(self):\n",
-    "        \"\"\" Create a deep clone of this game state.\n",
-    "        \"\"\"\n",
-    "        st = OthelloState()\n",
-    "        st.playerJustMoved = self.playerJustMoved\n",
-    "        st.board = [self.board[i][:] for i in range(self.size)]\n",
-    "        st.size = self.size\n",
-    "        return st\n",
-    "\n",
-    "    def DoMove(self, move):\n",
-    "        \"\"\" Update a state by carrying out the given move.\n",
-    "            Must update playerToMove.\n",
-    "        \"\"\"\n",
-    "        (x,y)=(move[0],move[1])\n",
-    "        assert x == int(x) and y == int(y) and self.IsOnBoard(x,y) and self.board[x][y] == 0\n",
-    "        m = self.GetAllSandwichedCounters(x,y)\n",
-    "        self.playerJustMoved = 3 - self.playerJustMoved\n",
-    "        self.board[x][y] = self.playerJustMoved\n",
-    "        for (a,b) in m:\n",
-    "            self.board[a][b] = self.playerJustMoved\n",
-    "    \n",
-    "    def GetMoves(self):\n",
-    "        \"\"\" Get all possible moves from this state.\n",
-    "        \"\"\"\n",
-    "        return [(x,y) for x in range(self.size) for y in range(self.size) if self.board[x][y] == 0 and self.ExistsSandwichedCounter(x,y)]\n",
-    "\n",
-    "    def AdjacentToEnemy(self,x,y):\n",
-    "        \"\"\" Speeds up GetMoves by only considering squares which are adjacent to an enemy-occupied square.\n",
-    "        \"\"\"\n",
-    "        for (dx,dy) in [(0,+1),(+1,+1),(+1,0),(+1,-1),(0,-1),(-1,-1),(-1,0),(-1,+1)]:\n",
-    "            if self.IsOnBoard(x+dx,y+dy) and self.board[x+dx][y+dy] == self.playerJustMoved:\n",
-    "                return True\n",
-    "        return False\n",
-    "    \n",
-    "    def AdjacentEnemyDirections(self,x,y):\n",
-    "        \"\"\" Speeds up GetMoves by only considering squares which are adjacent to an enemy-occupied square.\n",
-    "        \"\"\"\n",
-    "        es = []\n",
-    "        for (dx,dy) in [(0,+1),(+1,+1),(+1,0),(+1,-1),(0,-1),(-1,-1),(-1,0),(-1,+1)]:\n",
-    "            if self.IsOnBoard(x+dx,y+dy) and self.board[x+dx][y+dy] == self.playerJustMoved:\n",
-    "                es.append((dx,dy))\n",
-    "        return es\n",
-    "    \n",
-    "    def ExistsSandwichedCounter(self,x,y):\n",
-    "        \"\"\" Does there exist at least one counter which would be flipped if my counter was placed at (x,y)?\n",
-    "        \"\"\"\n",
-    "        for (dx,dy) in self.AdjacentEnemyDirections(x,y):\n",
-    "            if len(self.SandwichedCounters(x,y,dx,dy)) > 0:\n",
-    "                return True\n",
-    "        return False\n",
-    "    \n",
-    "    def GetAllSandwichedCounters(self, x, y):\n",
-    "        \"\"\" Is (x,y) a possible move (i.e. opponent counters are sandwiched between (x,y) and my counter in some direction)?\n",
-    "        \"\"\"\n",
-    "        sandwiched = []\n",
-    "        for (dx,dy) in self.AdjacentEnemyDirections(x,y):\n",
-    "            sandwiched.extend(self.SandwichedCounters(x,y,dx,dy))\n",
-    "        return sandwiched\n",
-    "\n",
-    "    def SandwichedCounters(self, x, y, dx, dy):\n",
-    "        \"\"\" Return the coordinates of all opponent counters sandwiched between (x,y) and my counter.\n",
-    "        \"\"\"\n",
-    "        x += dx\n",
-    "        y += dy\n",
-    "        sandwiched = []\n",
-    "        while self.IsOnBoard(x,y) and self.board[x][y] == self.playerJustMoved:\n",
-    "            sandwiched.append((x,y))\n",
-    "            x += dx\n",
-    "            y += dy\n",
-    "        if self.IsOnBoard(x,y) and self.board[x][y] == 3 - self.playerJustMoved:\n",
-    "            return sandwiched\n",
-    "        else:\n",
-    "            return [] # nothing sandwiched\n",
-    "\n",
-    "    def IsOnBoard(self, x, y):\n",
-    "        return x >= 0 and x < self.size and y >= 0 and y < self.size\n",
-    "    \n",
-    "    def GetResult(self, playerjm):\n",
-    "        \"\"\" Get the game result from the viewpoint of playerjm. \n",
-    "        \"\"\"\n",
-    "        jmcount = len([(x,y) for x in range(self.size) for y in range(self.size) if self.board[x][y] == playerjm])\n",
-    "        notjmcount = len([(x,y) for x in range(self.size) for y in range(self.size) if self.board[x][y] == 3 - playerjm])\n",
-    "        if jmcount > notjmcount: return 1.0\n",
-    "        elif notjmcount > jmcount: return 0.0\n",
-    "        else: return 0.5 # draw\n",
-    "\n",
-    "    def __repr__(self):\n",
-    "        s= \"\"\n",
-    "        for y in range(self.size-1,-1,-1):\n",
-    "            for x in range(self.size):\n",
-    "                s += \".XO\"[self.board[x][y]]\n",
-    "            s += \"\\n\"\n",
-    "        return s\n",
-    "\n",
     "class Node:\n",
     "    \"\"\" A node in the game tree. Note wins is always from the viewpoint of playerJustMoved.\n",
     "        Crashes if state not specified.\n",
